added more stuff

--- a/index.html
+++ b/index.html
@@ -5,29 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebTech solutions</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
+        <img src="assets/images/generate_a_logo_for_TechWeb_Solutions_with_black_text-removebg-preview.png" id="logo">
         <div id="top_header">
-            <div id="logo">
-                <img src="images/generate_a_logo_for_TechWeb_Solutions_with_black_text-removebg-preview.png">
-            </div>
             <nav>
-                <ul>
-                    <p>Home</p>
-                    <p>Features</p>
-                    <p>Services</p>
-                    <p>Log in</p>
-                    <p>Sing in</p>
+                <ul id="text">
+                    <a href="#home"><button>Home</button></a>
+                    <a href="#features"><button>Features</button></a>
+                    <a href="#services"><button>Services</button></a>
+                    <a href="#products"><button>Products</button></a>
+                    <button id="log_in">Log in</button>
+                    <button id="sign_up">Sign up</button>
                 </ul>
             </nav>
         </div>
     </header>
-    <div class="headlines">
-        <h1>TechWeb</h1>
+    <div class="headlines" id="home">
+        <h1 id="headline">TechWeb</h1>
+        <p id="discription">TechWeb Solution is a technology company specializing in software development, IT consulting, and digital transformation services to empower businesses globally. </p>
     </div>
-    <div class="text">
-        <p>TechWeb Solution is a technology company specializing in software development, IT consulting, and digital transformation services to empower businesses globally. </p>
+    <!-- <div class="headlines" id="features">
+        <h1>Key Features of TechWeb Solution:</h1>
     </div>
+    <ul>
+        <li>Innovative, client-focused technology solutions.</li>
+        <li>team and scalable services.</li>
+        <li>Comprehensive offerings: software, IT consulting, web, and cloud.</li>
+        <li>Timely, cost-effective delivery with 24/7 support.</li>
+    </ul>
+    <div class="headlines" id="services">
+        <h1>our Services:</h1>
+    </div>
+    <ul>
+        <li>Custom software, web, and mobile app development.</li>
+        <li>IT consulting and cloud solutions.</li>
+        <li>Digital marketing and e-commerce platforms.</li>
+        <li>24/7 technical support.</li>
+    </ul>
+    <div class="headlines" id="products">
+        <h1>Our Products :</h1>
+    </div>
+    <ol>
+        <li>Business Management Software: Tools for streamlining operations, project management, and workflow automation.</li>
+        <li>E-commerce Platforms: Ready-to-use, customizable platforms for online businesses.</li>
+        <li>Mobile Applications: Pre-designed apps for various industries, ensuring scalability and efficiency.</li>
+        <li>Cloud-Based Solutions: Products for secure data storage, collaboration, and remote access.</li>
+        <li>Analytics Tools: Advanced data analysis software for business insights and decision-making.</li>
+        <li>Customizable CRM: Customer relationship management systems tailored to industry needs.</li>
+        <li>Security Solutions: Products for safeguarding data and IT infrastructure.</li>
+    </ol> -->
+    <footer>
+        <div id="footer_text">
+            <p>© 2024 MySite. All rights reserved.</p>
+            <p>Contact info : sami@gmail.com</p>
+        </div>
+    </footer>
 </body>
-</html>
+</html>>
