--- a/index.html
+++ b/index.html
@@ -25,32 +25,32 @@
             </nav>
         </div>
     </header>
-    <div class="headlines" id="home">
-        <h1 id="headline">TechWeb</h1>
+    <div id="home">
+        <h1 id="headline1">TechWeb</h1>
         <p id="discription">TechWeb Solution is a technology company specializing in software development, IT consulting, and digital transformation services to empower businesses globally. </p>
     </div>
-    <!-- <div class="headlines" id="features">
+    <div class="headlines" id="features">
         <h1>Key Features of TechWeb Solution:</h1>
     </div>
-    <ul>
+    <ul class="lists">
         <li>Innovative, client-focused technology solutions.</li>
         <li>team and scalable services.</li>
         <li>Comprehensive offerings: software, IT consulting, web, and cloud.</li>
         <li>Timely, cost-effective delivery with 24/7 support.</li>
     </ul>
     <div class="headlines" id="services">
-        <h1>our Services:</h1>
+        <h1>Services:</h1>
     </div>
-    <ul>
+    <ul class="lists">
         <li>Custom software, web, and mobile app development.</li>
         <li>IT consulting and cloud solutions.</li>
         <li>Digital marketing and e-commerce platforms.</li>
         <li>24/7 technical support.</li>
     </ul>
     <div class="headlines" id="products">
-        <h1>Our Products :</h1>
+        <h1>Products :</h1>
     </div>
-    <ol>
+    <ol class="lists">
         <li>Business Management Software: Tools for streamlining operations, project management, and workflow automation.</li>
         <li>E-commerce Platforms: Ready-to-use, customizable platforms for online businesses.</li>
         <li>Mobile Applications: Pre-designed apps for various industries, ensuring scalability and efficiency.</li>
@@ -58,7 +58,7 @@
         <li>Analytics Tools: Advanced data analysis software for business insights and decision-making.</li>
         <li>Customizable CRM: Customer relationship management systems tailored to industry needs.</li>
         <li>Security Solutions: Products for safeguarding data and IT infrastructure.</li>
-    </ol> -->
+    </ol>
     <footer>
         <div id="footer_text">
             <p>© 2024 MySite. All rights reserved.</p>
