added new link to a new html file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="assets/images/generate_a_logo_for_TechWeb_Solutions_with_black_text-removebg-preview.png" id="logo">
+        <a href="#home"><img src="assets/images/logo 2.png" id="logo"></a>
         <div id="top_header">
             <nav>
                 <ul id="text">
@@ -19,7 +19,7 @@
                     <a href="#features"><button>Features</button></a>
                     <a href="#services"><button>Services</button></a>
                     <a href="#products"><button>Products</button></a>
-                    <button id="log_in">Log in</button>
+                    <a href="log_in.html" target="_blank"><button id="log_in">Log in</button></a>
                     <button id="sign_up">Sign up</button>
                 </ul>
             </nav>
