--- a/log_in.html
+++ b/log_in.html
@@ -5,8 +5,14 @@
         <title>Log In page</title>
     </head>
     <body>
-        <dev class="box">
-            <h1 id="text">Log in</h1>
+        <dev id="box">
+            <h1>Log in</h1>
         </dev>
+        <footer>
+            <div id="footer_text">
+                <p>© 2024 MySite. All rights reserved.</p>
+                <p>Contact info : sami@gmail.com</p>
+            </div>
+        </footer>
     </body>
 </html>
